objects/Bypass_Logic_Switch__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is created to toggle bypass logic for trigger, validation rule, flows etc.</description>
    <fields>
        <fullName>Bypass_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is utilized to bypass the trigger logic</description>
        <label>Bypass Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is utilized to bypass the validation rule</description>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_To_Bypass__c</fullName>
        <description>This field going to hold the Object Name for which we want to bypass the trigger/validation rule/workflow</description>
        <label>Object To Bypass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bypass Logic Switch</label>
</CustomObject>